# ChatSpatial

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .readthedocs.yaml  CELLRANK_OPTIMIZATION.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPREHENSIVE_TESTING_REPORT.md  CONTRIBUTING.md  DEPENDENCY_RESOLUTION_REPORT.md  DEPENDENCY_VERSION_FIX_REPORT.md  DETAILED_FUNCTION_OVERLAP_TABLE.md  DETAILED_FUNCTION_USAGE_ANALYSIS.md  ENRICHMAP_API_ISSUE_ANALYSIS.md  ENRICHMENT_VISUALIZATION_GUIDE.md  GEMINI.md  IMAGE_DISPLAY_SOLUTION.md  IMPLICIT_SELECTION_COMPREHENSIVE_AUDIT.md  INSTALLATION.md  JUST_THE_DOCS_MIGRATION_REPORT.md  MCP_COMPLIANCE_ANALYSIS.md  MCP_TEST_STRATEGY.md  OVERLEAF_CLAUDE_SETUP.md  PLAN_B_IMPLEMENTATION_SUMMARY.md  PROJECT_CLEANUP_COMPLETE.md  PROJECT_STRUCTURE.md  PR_REVIEW_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  SCIENTIFIC_MISLEADING_BEHAVIORS_COMPREHENSIVE_AUDIT.md  SECURITY.md  SMART_DEPENDENCY_SYSTEM.md  SPATIAL_DOMAINS_REFACTOR_PLAN.md  SPATIAL_DOMAINS_REFACTOR_PLAN_UPDATED.md  SPATIAL_FUNCTIONS_OVERLAP_ANALYSIS.md  SPHINX_MIGRATION.md  STEREOSCOPE_VERIFICATION_RESULT.md  TESTING_STRATEGY.md  TEST_ORGANIZATION_SUMMARY.md  (+38 more)
.claude/: settings.local.json
.github/: PAGES_CONFIG.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  mcp_integration.md
.github/workflows/: ci.yml  deploy-docs.yml  docs-preview.yml  gh-pages.yml  main.yml  mcp-registry.yml  minimal-test.yml  pages.yml  quality.yml  release.yml  test-full.yml  test-installation.yml  test.yml  tests.yml
archived_docs/: README.md
archived_docs/reports/: SCANVI_TEST_REPORT.md  TANGRAM_IMPROVEMENT_PLAN.md  TANGRAM_TESTING_REPORT.md  cellassign_test_results.json
archived_tests/: README.md
archived_tests/cell_communication_testing/: benchmark_results.json  bias_demonstration_analysis.py  demo_validation.py  final_integration_test.py  performance_benchmark_report.py  standalone_final_validation.py
archived_tests/tangram/: debug_tangram.py
backups/: visualization_original_backup_20250620_024456.py
chatspatial/: __init__.py  __main__.py  config.py  http_server.py  mcp_improvements.py  server.py  spatial_mcp_adapter.py
chatspatial/cli/: __init__.py  dependency_manager.py
chatspatial/mcp/: __init__.py  annotations.py  errors.py  prompts.py  resources.py
chatspatial/models/: __init__.py  analysis.py  data.py  data_standards.py
chatspatial/tools/: __init__.py  _color_utils.py  annotation.py  annotation_singler.py  cell_communication.py  cnv_analysis.py  condition_comparison.py  deconvolution.py  differential.py  embeddings.py  enrichment.py  enrichment_analysis.py  gaston_spatial_genes.py  gene_set_loader.py  generic_enrichment.py  improved_tangram.py  integration.py  pathway_enrichment.py  preprocessing.py  preprocessing_migrated.py  spatial_analysis.py  spatial_domains.py  spatial_enrichment.py  spatial_genes.py  spatial_registration.py  spatial_statistics.py  spatial_variable_genes.py  trajectory.py  velocity.py  visualization.py
chatspatial/utils/: __init__.py  adata_persistence.py  adata_utils.py  compat.py  compute.py  constants.py  data_adapter.py  data_loader.py  data_validator.py  dependency_fallbacks.py  dependency_manager.py  error_handling.py  exceptions.py  image_utils.py  mcp_parameter_handler.py  mcp_utils.py  metadata_storage.py  output_utils.py  path_utils.py  persistence.py  plotting.py  publication_export.py  pydantic_error_handler.py  results_export.py  scipy_compat.py  smart_import.py  tool_error_handling.py  user_guidance.py  validation.py
data/: DATASETS_INDEX.md  DATA_ORGANIZATION_COMPLETE.md  FINAL_DATASETS_ORGANIZATION.md
data/benchmark_datasets/: README.md
data/demo_datasets/: README.md
data/documentation/: API_REFERENCE.md  MAIN_INDEX.md  QUICKSTART.md
data/harmony/: README.md
data/metadata/: README.md  comprehensive_catalog.json  datasets_catalog.json
data/real_datasets/: README.md
data/reference_datasets/: README.md
data/single_cell_datasets/: README.md
data/spatial_datasets/: README.md
data/synthetic_datasets/: README.md
docs/: .gitignore  API_REFERENCE.md  CRITICAL_IMAGE_DISPLAY_BUG.md  ChatSpatial_MCP_功能文档.md  ENRICHMAP_INTEGRATION.md  Gemfile  HTTP_TRANSPORT.md  INSTALLATION_TESTING.md  LOGO_INTEGRATION_SUMMARY.md  MCP_SERVER_SPECIFICATION.md  MCP_TOOLS_QUICK_REFERENCE.md  NAVIGATION.md  PR_MERGE_STATUS.md  PYTHON_COMPATIBILITY_REPORT.md  README.md  Rakefile  SPATIAL_STATISTICS_USAGE.md  SPOTIPHY_INSTALLATION.md  THEME_CUSTOMIZATION_README.md  _config.yml  benchmarks.md  concepts.md  conf.py  configuration.md  data_formats.md  examples.md  getting_started.md  image_utils.md  index.md  index.rst  installation.md  performance.md  quickstart.md  requirements.txt  singler_integration.md  spatial_analysis_enhancement_plan.md  spotiphy_integration_report.md  style-guide.md  test-build.sh  what_is_mcp.md  (+1 more)
docs/_includes/: head_custom.html
docs/_static/: custom.css
docs/advanced/: configuration.md  faq.md  installation.md  methods-reference.md  troubleshooting.md
examples/: cell_communication_example.py  enable_mcp_example.py  http_client_example.py  image_utils_example.py  liana_communication_example.py  spatial_domains_example.py  spatial_variable_genes_example.py
harmony_datasets/: harmony_tutorial.py
outputs/: CARD_DATA_COMPREHENSIVE_TEST.md  DECONVOLUTION_FIX_SUMMARY.md  GENE_NAME_CASE_INVESTIGATION.md  GENE_PARAM_REDUNDANCY_ANALYSIS.md  TANGRAM_FIX_VERIFICATION.md  compare_tangram_data_sources.py  diagnose_tangram_clusters.py
scripts/: README.md  batch_translate.py  clean_project.sh  create_harmony_test_data.py  download_harmony_datasets.py  install_gaston.py  install_spatial_methods.py  migrate_tool_error_handling.py  organize_tests.py  run_tests.py  setup_spatial_methods.py  translate_remaining.py
tests/: README.md  conftest.py  run_new_methods_test.py  test_cell_communication.py  test_error_handling.py  test_image_utils.py  test_spatial_domains.py  test_spatial_unified.py  test_spatial_variable_genes.py  test_visualization_integration.py
(+304 files in other folders)
