[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatspatial"
version = "0.1.0"
description = "ChatSpatial: An interactive AI assistant for spatial transcriptomics analysis"
requires-python = ">=3.8,<3.13"
dependencies = [
    # Core dependencies only - minimal installation
    "mcp>=0.1.0",
    "numpy>=1.21.0,<2.0; python_version<'3.13'",
    "numpy>=2.1.0,<3.0; python_version>='3.13'",
    "pandas>=1.3.0,<3.0",
    "scipy>=1.7.0,<2.0",
    "scikit-learn>=1.0.0,<2.0",
    "matplotlib>=3.5.0,<4.0",
    "seaborn>=0.11.0,<1.0",
    
    # Single-cell analysis core
    "scanpy>=1.9.0,<2.0",
    "anndata>=0.8.0,<1.0",
    
    # Version constraint to handle jinja2 conflict with pygpcca
    "jinja2>=3.0.0",
    
    # Spatial analysis essentials
    "squidpy>=1.2.0,<2.0",
    
    # Basic clustering and dimensionality reduction
    "umap-learn>=0.5.0,<1.0",
    "igraph>=0.9.0,<1.0",
    "leidenalg>=0.8.0,<1.0",
    
    # MCP server framework
    "fastapi>=0.100.0,<1.0",
    "uvicorn[standard]>=0.23.0,<1.0",
    "pydantic>=2.0.0,<3.0",
    "click>=8.0.0,<9.0",
    "aiohttp>=3.8.0,<4.0",
    
    # Basic plotting and CLI interface
    "Pillow>=8.0.0,<11.0",
    "rich>=12.0.0,<14.0",  # Rich text and beautiful formatting for CLI
]

[project.optional-dependencies]
# Advanced features with modern dependencies
advanced = [
    # Deep learning frameworks (PyTorch 2.x only)
    "torch>=2.0.0,<3.0",
    
    # Advanced spatial analysis
    "SpaGCN>=1.2.5,<2.0",
    
    # Deconvolution methods
    "cell2location>=0.1.3,<1.0",
    "scvi-tools>=1.0.0,<2.0",
    
    # RNA velocity and trajectory
    "scvelo>=0.2.5,<1.0",
    "cellrank>=2.0.0,<3.0",
    
    # Batch integration
    "harmonypy>=0.0.9,<1.0",
    "bbknn>=1.5.0,<2.0",
    "scanorama>=1.7.0,<2.0",
    
    # Spatial variable genes
    "spatialde>=1.1.3,<2.0",
    
    # Cell communication
    "liana>=0.1.13,<1.0",
    
    # Performance optimization
    "numba>=0.57.0,<1.0",
    "dask>=2024.1.0,<2025.0",
    
    # Visualization
    "plotly>=5.0.0,<6.0",
    "opencv-python>=4.5.0,<5.0",
    
    # Gene set enrichment
    "gseapy>=1.0.0,<2.0",
]

# Experimental features (may have compatibility issues)
experimental = [
    # R interface (requires separate R installation)
    "rpy2>=3.4.0,<4.0",
    
    # Experimental cell communication
    "cellphonedb>=5.0.0,<6.0",
    
    # Spatial registration
    "paste-bio>=1.0.0,<2.0",
    
    # High-performance computing
    "petsc4py>=3.17.0,<4.0",
    "slepc4py>=3.17.0,<4.0",
    "mpi4py>=3.1.0,<4.0",
    
    # Emerging spatial methods
    "spatialdata>=0.2.0,<1.0",
]

# EnrichMap-specific dependencies
enrichmap = [
    "statannotations>=0.2.0,<1.0",
    "pygam>=0.8.0,<1.0",
    "scikit-gstat>=1.0.0,<2.0",
    "adjustText>=0.8.0,<1.0",
    "splot>=1.1.0,<2.0",
    "dask>=2024.1.0,<2025.0",
]

# Development dependencies
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-asyncio>=0.23.0,<1.0",
    "black>=22.0.0,<25.0",
    "mypy>=1.0.0,<2.0",
    "pre-commit>=3.0.0,<4.0",
]

# All optional dependencies (use with caution)
all = [
    # Include all feature sets
    "chatspatial[advanced,experimental,enrichmap,dev]",
]

[project.scripts]
chatspatial = "chatspatial.__main__:main"
chatspatial-http = "chatspatial.http_server:main"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"
# Fix pytest-asyncio warning
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Suppress known upstream dependency version warnings
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore:pkg_resources is deprecated:DeprecationWarning",
    "ignore:.*jinja2.*:UserWarning",
    "ignore:.*numpy.*version.*:UserWarning",
]